src/tests/test-src/errors/R23-for-step-zero.syntran
let s = 0;
for i in [0: s: 5]
{
}
